hew-codegen/tests/examples/e2e_toml/toml_try_parse.hew
import std::encoding::toml;

fn main() {
    match toml.try_parse("title = \"Hew\"") {
        Ok(doc) => {
            let title = doc.get_field("title");
            println(title.get_string());
        },
        Err(err) => match err {
            ParseError::Invalid(message) => println(f"unexpected error: {message}"),
        },
    }

    let manual: toml.ParseError = ParseError::Invalid("typed parse error");
    match manual {
        ParseError::Invalid(message) => println(message),
    }

    match toml.try_parse("not = [valid toml") {
        Ok(_) => println("unexpected ok"),
        Err(err) => match err {
            ParseError::Invalid(message) => print(message),
        },
    }
}
